# colorscheme

./: .gitignore  README.txt  colorscheme.cabal  colorscheme.hs  stack.yaml
app/: Main.hs
src/: Colorscheme.hs  Palette.hs
